// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with JSX header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r3t»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r79»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 rounded-lg border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed !aspect-square !rounded-full !p-0 !h-11 !w-11 [&>span]:!p-0 [&>span]:!m-0"
  id="«r7b»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <span
      class="ml-2 inline-flex h-4 w-4 items-center justify-center rounded-full bg-cyan-200 text-xs font-semibold text-cyan-800"
      data-testid="flowbite-button-label"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7d»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7f»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7h»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7j»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4l»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4n»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4p»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4r»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all props provided 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Complete Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-green-800 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-success dark:bg-success hover:enabled:bg-system-success-tints-600 dark:hover:enabled:bg-system-success-tints-600 focus:ring-system-success-tints-200 rounded-lg"
  id="«r5j»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-5 py-2.5 text-base"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Complete Dropdown
      <div
        class="flex items-center"
      >
        <span
          data-testid="mock-icon"
        >
          Icon
        </span>
      </div>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4f»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-3 py-1.5 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4h»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4j»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-5 py-2.5 text-base"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="undefined dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7l»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Custom Title dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7n»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Custom Title
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label=" dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7p»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7r»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7t»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r7v»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r49»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with complex items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r73»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with custom title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Custom Title dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r3p»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Custom Title
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with default props 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r3n»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4t»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button-alt dark:bg-surface-button-alt hover:enabled:bg-surface-button-alt-hover dark:hover:enabled:bg-surface-button-alt-hover focus:ring-surface-button-alt-pressed rounded-lg"
  id="«r4v»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-green-800 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-success dark:bg-success hover:enabled:bg-system-success-tints-600 dark:hover:enabled:bg-system-success-tints-600 focus:ring-system-success-tints-200 rounded-lg"
  id="«r51»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-yellow-900 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-warning dark:bg-warning hover:enabled:bg-system-warning-tints-600 dark:hover:enabled:bg-system-warning-tints-600 focus:ring-system-warning-tints-200 rounded-lg"
  id="«r53»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-error dark:bg-error hover:enabled:bg-system-error-tints-600 dark:hover:enabled:bg-system-error-tints-600 focus:ring-system-error-tints-200 rounded-lg"
  id="«r55»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:outline-none undefined rounded-lg"
  id="«r57»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with disabled checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4d»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with disabled items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r45»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with divider items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r47»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty items array 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5f»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty string header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r65»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty string title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label=" dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r63»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r3r»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with icon 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r59»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
      <div
        class="flex items-center"
      >
        <span
          data-testid="mock-icon"
        >
          Icon
        </span>
      </div>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with icon only 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 rounded-lg border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed !aspect-square !rounded-full !p-0 !h-11 !w-11 [&>span]:!p-0 [&>span]:!m-0"
  id="«r5b»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="flex h-full w-full items-center justify-center"
    >
      <span
        data-testid="mock-icon"
      >
        Icon
      </span>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with inline prop 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5d»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r3v»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items with custom className 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r43»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items with icons 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r41»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items without labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r75»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with long title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="This is a very long title for the dropdown component that should be handled properly dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5l»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      This is a very long title for the dropdown component that should be handled properly
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with many items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r71»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with mixed item types 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r77»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null color 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:outline-none undefined rounded-lg"
  id="«r6n»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6d»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null iconOnly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6r»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null inline 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6v»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null size 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6h»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="null dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r69»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5r»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in item labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5v»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Dropdown: <script>alert("test")</script> & More dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5n»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Dropdown: &lt;script&gt;alert("test")&lt;/script&gt; & More
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unchecked checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r4b»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined color 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6l»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6b»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined iconOnly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6p»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined inline 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6t»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5h»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined placement 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6j»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined size 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r6f»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="undefined dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r67»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5t»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in item labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r61»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="下拉菜单 🗂️ dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="«r5p»"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      下拉菜单 🗂️
    </div>
  </span>
</button>
`;
